[package]
name = "queue"
version = "0.1.0"
authors = ["Julius Boateng", "Stephen Hannon", "Emory Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "1.1.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
